# 2023-europe-space-weather

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-test.yaml
config/: dgx_train.yaml  eruption_train.yaml  hao.yaml  hao_1view.yaml  hao_1view_120.yaml  hao_1view_min_energy.yaml  hao_2view.yaml  hao_2view_180.yaml  hao_2view_270.yaml  hao_2view_90.yaml  hao_2view_background.yaml  hao_2view_no_physics.yaml  hao_5view.yaml  hao_5view_no_physics.yaml  hao_all.yaml  hao_all_no_physics.yaml  hyperparams.yaml  hyperparams_hao.yaml  hyperparams_icarus.yaml  hyperparams_obs.yaml  hyperparams_psi.yaml  onboard.yaml  onboard_classifier.yaml  psi_train.yaml  train.yaml  transfer_train.yaml  v100_train.yaml
docker/ground/: .gitignore  Dockerfile  build.sh
reports/junit/: junit.xml
scripts/: 1view.sh  1view_120.sh  1view_min_energy.sh  2view.sh  2view_180.sh  2view_270.sh  2view_90.sh  2view_background.sh  5view.sh  all_viewpoints.sh  background.sh  comparisons.sh  density_slice.sh  download.sh  format_disk.sh  mount_disk.sh  mount_onboard_data_drive.sh  run_193.sh  run_icarus.sh  video.sh
src/icarus/data/: data_loader.py  download_globus.py  secchi_l0_a_seq_cor1_20120306_20120306_230000_s4c1a.fts
src/icarus/onboard/: L5_positions.ephemeris  SOHO_positions.ephemeris  (+11 more)
sunerf/: make_video.yaml  readme.md  run.py  sunerf.py
sunerf/data/: align_data.py  convert_stereo_to_sdo.py  convert_stereo_to_sdo_full.py  download_globus.py  download_helio_concurrent_aia_stereo.py  download_sdo_jsoc.py  download_sdo_single_wl.py  download_solo_eui.py  download_synoptic_map.py  plot_data.py  utils.py
sunerf/evaluation/: baseline_simulation.py  callback.py  comparison_solo.py  create_fits_synchronic_map.py  data_cube_model.py  density_cube.py  density_cube_comparison.py  density_cube_eval.py  density_cube_groundtruth.py  density_cube_model.py  density_cube_model_one_slice.py  density_slice.py  eruption.py  eruption_profile.py  google_sphere.py  load_density_cube.py  loader.py  make_video.py  method_overview.py  metrics_simulation.py  overview_plot.py  overview_simulation.py  pinnerf_error_evaluation.py  plot_stereo.py  polar_view.py  psi_synchronic_map.py  topographical_map.py  topographical_profile.py  topographical_slice.py  uncertainty_correlation.py  video_193.py  video_304.py  video_cme.py  video_data.py  video_eruption.py  video_pole_time.py  video_time.py  video_zoom.py  voxel_volume.py  vtk.py
sunerf/model/: model.py  sunerf.py
sunerf/prep/: prep_hao.py  prep_obs.py  prep_psi.py  prep_psi_cor.py  prep_sdo.py  prep_so.py  prep_stereo.py
sunerf/train/: coordinate_transformation.py  model.py  ray_sampling.py  rendering.py  sampling.py  scaling.py  simple_atmosphere_model.py  volume_render.py
sunerf/utilities/: data_loader.py  reprojection.py
test/: default_test.py
test/data/: test_data_loader.py
test/integration/: test_installed_packages.py
test/unit/: test_default.py
(+60 files in other folders)
