[project]
name = "icarus"
description = "FDL 2023 Helio Onboard"
version = "0.1.0"
authors = [
    { name = "", email = "user@example.com" }
]
dependencies = [
    "torch>=2.0",
    "wandb",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage-badge"
]
onboard = [
    "openvino"
]
ground = [
    "sunpy[all]",
    "wandb",
    "pytorch-lightning==1.9.3",
    "InstrumentToInstrument@git+https://github.com/RobertJaro/InstrumentToInstrument.git"
]


[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
py-version = "3.10"
jobs = 2
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.typing"]
disable = ["line-too-long"]

[tool.pytest.ini_options]
addopts = [
    "-x",
    "--junitxml=reports/junit/junit.xml",
    "--cov=icarus",
    "--color=yes",
    "--verbose",
    "--durations=0"
]
testpaths = [
    "test/unit",
    "test/integration",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
